# battlefield-bad-company-2-hack

./: hacklib_project.sln  sh.exe.stackdump
lib/hacklib.tlog/: CL.1032.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  hacklib.lastbuildstate
src/hacklib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  hacklib.sln  hacklib.vcxproj  hacklib.vcxproj.filters
src/hacklib/include/hacklib/: DrawerD3D.h  GfxOverlay.h  IDrawer.h  ImplementMember.h  Main.h  Math.h  PatternScanner.h
src/hacklib/src/: ConsoleEx.cpp  CrashHandler_WIN32.cpp  D3DDeviceFetcher.cpp  DrawerD3D.cpp  DrawerOpenGL.cpp  ExeFile.cpp  ExeFile_WIN32.cpp  GfxOverlay.cpp  GfxOverlay_WIN32.cpp  Hooker.cpp  Hooker_VEH.cpp  IDrawer.cpp  Injector_WIN32.cpp  Input.cpp  Logging.cpp  Main.cpp  Main_WIN32.cpp  Memory_WIN32.cpp  MessageBox_WIN32.cpp  Patch.cpp  PatternScanner.cpp  WindowOverlay.cpp  WindowOverlay_WIN32.cpp
src/hacklib_bf/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Aimbot.cpp  Aimbot.h  BF3_Cam.h  BF3_Input.h  BF3_Library.h  BF3_Main.h  BF3_Skeleton.h  BF3_Weapon.h  BF4_Cam.h  BF4_Input.h  BF4_Library.h  BF4_Main.h  BF4_Weapon.h  BFBC2_Cam.h  BFBC2_Input.h  BFBC2_Library.h  BFBC2_Main.h  BFBC2_Mystate.h  BFBC2_Skeleton.h  BFBC2_Weapon.h  BattlefieldData.cpp  BattlefieldData.h  BattlefieldDataMgr.cpp  BattlefieldDataMgr.h  CMakeLists.txt  CamData.cpp  CamData.h  Error.cpp  EspDrawer.cpp  EspDrawer.h  Hack.cpp  Hack.h  Input.cpp  Input.h  OwnData.cpp  OwnData.h  PIDController.h  Player.cpp  (+15 more)
